--- a/app/sass/style-ie9.scss
+++ b/app/sass/style-ie9.scss
@@ -142,7 +142,10 @@
 				margin-right: 10px;
 			}
 		}
-	}	
+	}
+	.form-search__input {
+		max-width: 92%;
+	}
 }
 .header-nav-system__content {
 	background-color: #e4e4e4;
