--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -148,9 +148,7 @@ block content
 				.card__text.text-ddd-210
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-					p
-						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
-					a.button.card__more(href='#') Читать далее
+
 	.row
 		.col-12.col-sm-4
 			.card
@@ -163,7 +161,7 @@ block content
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 					p
-						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка
+						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс
 					a.button.card__more(href='#') Читать далее
 
 
