--- a/app/css/style.css
+++ b/app/css/style.css
@@ -689,12 +689,6 @@ body {
   line-height: normal;
 }
 
-body.modal-open .header {
-  -webkit-transform: translateX(-8px);
-      -ms-transform: translateX(-8px);
-          transform: translateX(-8px);
-}
-
 img {
   max-width: 100%;
 }
@@ -1392,6 +1386,7 @@ h2 span,
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .extra-wrapper .header,
