--- a/app/sass/general/_deafult.scss
+++ b/app/sass/general/_deafult.scss
@@ -56,7 +56,7 @@ body {
   line-height: normal;
 	&.modal-open {
 		.header {
-			transform: translateX(-8px);
+			//transform: translateX(-8px);
 
 			@media (min-width: 768px) {
 				padding-right: 0px !important;
@@ -428,6 +428,7 @@ section, .section {
 	width: 100%;
 	height: 100vh;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	.header, .header.scroll {
 		position: absolute;
 		z-index: 1000;
