--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1887,6 +1887,12 @@ h2 span,
   background-color: #f4f5f5;
 }
 
+input,
+textarea {
+  font-size: 12px;
+  line-height: 1;
+}
+
 .form-search__label {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1957,6 +1963,7 @@ h2 span,
 
 .form-slide-input {
   display: none;
+  width: 100%;
 }
 
 .form-label {
@@ -2052,7 +2059,6 @@ h2 span,
   width: 100%;
   padding: 10px 15px;
   color: #000000;
-  font-size: 16px;
   font-weight: 400;
 }
 
@@ -2218,6 +2224,8 @@ h2 span,
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  max-width: 700px;
 }
 
 .form-checkbox__label {
@@ -2229,6 +2237,7 @@ h2 span,
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  min-width: 240px;
 }
 
 .form-checkbox__input {
