--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -22,6 +22,12 @@ block content
 	//Галерея - "Слайдер с описанием", тип "Темный"
 	include cards/_cards-full-galery-slider-imgfull-text
 
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	include cards/_cards-full-galery-slider-modern
+
+	//Галерея - "Слайдер с описанием", тип "Модерн"
+	include cards/_cards-full-galery-slider-modern_bottomtext
+
 	- var pageTitle = 'Галерея "Слайдер"';
 	include page/_page-special-title
 
