--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -736,10 +736,12 @@
 			padding-top: 75px;
 			padding-left: 30px;
 			padding-right: 5px;
+			max-width: 440px;
 			@include md-block {
 				padding-top: 20px;
 				padding-left: 0;
 				vertical-align: bottom;
+				max-width: 270px;
 			}
 			@include xs-block {
 				padding-left: 5px;
