--- a/app/pug/stylegide/_stylegide__colors.pug
+++ b/app/pug/stylegide/_stylegide__colors.pug
@@ -6,6 +6,7 @@
 	- var colors = [];
 	- colors.push({code: '#FFFFFF', bgClass: 'bg-color-light', colorClass: 'color-light'});
 	- colors.push({code: '#FBFBFB', bgClass: 'bg-color-light-1', colorClass: 'color-light-1'});
+	- colors.push({code: '#F4F5F5', bgClass: 'bg-color-light-2', colorClass: 'color-light-2'});
 	- colors.push({code: '#EEEFEF', bgClass: 'bg-color-dark-1', colorClass: 'color-dark-1'});
 	- colors.push({code: '#E0E1E2', bgClass: 'bg-color-dark-2', colorClass: 'color-dark-2'});
 	- colors.push({code: '#DDDEE0', bgClass: 'bg-color-dark-3', colorClass: 'color-dark-3'});
