--- a/app/sass/general/_deafult.scss
+++ b/app/sass/general/_deafult.scss
@@ -158,6 +158,9 @@ $font-sizes: 8, 10, 12, 14, 17, 20, 22, 24, 28, 32, 40;
   &-light-1 {
     background-color: #FBFBFB !important;
 	}
+  &-light-2 {
+    background-color: #F4F5F5 !important;
+	}
 	&-dark-1 {
 		background-color: #eeefef !important;
 	}
@@ -207,6 +210,9 @@ $font-sizes: 8, 10, 12, 14, 17, 20, 22, 24, 28, 32, 40;
 	}
   &-light-1 {
     color: #FBFBFB !important;
+	}
+  &-light-2 {
+    color: #F4F5F5 !important;
 	}
 	&-dark-1 {
 		color: #eeefef !important;
