--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -332,7 +332,7 @@ block vars
 
 block content
 	.card.text-right.margin-top-md-15.margin-bottom-md-0
-		button.button.button-border.button-width-142 Дать объявление
+		button.button.button-ads.button-border Дать объявление
 	+baseAds('Продается гараж 18 м2', '#tabModal1')
 	+contentAds('img/block-img-01.jpg', '#tabModal1')
 	+cardModal('img/block-img-01.jpg', 'tabModal1', 'Продается гараж 18 м2')
