--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1799,6 +1799,13 @@ h2 span,
   color: #ffffff;
 }
 
+.button-ads {
+  height: 35px;
+  width: 158px;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
 .button-burg {
   position: relative;
   display: none;
