--- a/app/pug/cards/_cards-full-galery-slider-modern.pug
+++ b/app/pug/cards/_cards-full-galery-slider-modern.pug
@@ -15,7 +15,7 @@ mixin slideModern ()
 								.card__text
 									p
 										| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...
-								.card-slider-number
+								.card-slider-number_modern
 									span
 
 .cards
@@ -34,6 +34,10 @@ mixin slideModern ()
 
 	.card.card-full.card-full-slider.card-modern
 		.card-full-slider-wrap.card-wrap.card-full-wrap.card-modern-slider-wrap
+			+slideModern()
+			+slideModern()
+			+slideModern()
+			+slideModern()
 			+slideModern()
 			+slideModern()
 			+slideModern()
