--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -43,6 +43,8 @@
 	transform: translateZ(0);
 	background-color: #fff;
 	padding-bottom: 15px;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 	@include lg-block {
 		padding-top: 15px;
 		padding-bottom: 0;
