--- a/app/pug/modules/_header-structure.pug
+++ b/app/pug/modules/_header-structure.pug
@@ -25,10 +25,10 @@ header.header
 						img.logo-img(src='img/logo.png', alt='Logo')
 				nav#menu-nav-more.menu-nav.menu-nav-header
 					.nav-more.menu-nav-more.menu-nav-header-more
-						button.button.header-button.menu-nav__button.menu-nav-header__button(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button', aria-haspopup='true', aria-expanded='false')
+						button.button.header-button.menu-nav__button.menu-nav-header__button(data-toggle='collapse', data-target='#menu-nav-header-group', type='button', aria-haspopup='true', aria-expanded='false')
 							| РЕГИОНАЛЬНЫЕ НОВОСТИ
 							i.icon-arrow-down
-						ul#menu-nav-headerGroup.nav-more-list.menu-nav-group.menu-nav-header-group.collapse
+						ul#menu-nav-header-group.nav-more-list.menu-nav-group.menu-nav-header-group.collapse
 
 							li.nav-more-list__item.menu-nav__item.menu-nav-header__item(data-toggle='collapse', data-target='#menu-nav-header-collapse-1', aria-expanded='false', aria-controls='menu-nav-header-collapse-1')
 								.menu-nav__textbox.menu-nav-header__textbox
