--- a/app/pug/modules/_header-structure.pug
+++ b/app/pug/modules/_header-structure.pug
@@ -314,11 +314,11 @@ header.header
 						a.header-user__name.user__name(href= links.profile)
 							span Константин
 							span Константинопольский
-						button.rollUp
+						button.roll-up
 							i.icon-arrow-down
 					.header-button-inn.button-inn
 						button.header-button.button.button-help помощь
-						button#header-navControl.header-button.button.active(data-toggle='collapse', data-target='#header-nav', aria-expanded='false', aria-controls='header-nav') Системы
+						button#header-nav-control.header-button.button.active(data-toggle='collapse', data-target='#header-nav', aria-expanded='false', aria-controls='header-nav') Системы
 						button#btnDeploy.header-button.button.button-deploy Развернуть
 						// <button id="btnToTop" class="header-button button button-toTop">Наверх</button>
 						// /.header-box
