--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -318,7 +318,7 @@ block vars
 															i.icon-arrow-down
 														.comment__reply.comment__link_right
 															button Ответить
-										#commentFormbox.comment-form-inn.colapse.show
+										#comment-formbox.comment-form-inn.colapse.show
 											.comment.comment_special
 												.article-author
 													p.article-author__left Оставить комментарий:
