--- a/app/pug/modals/_modal-content-comments.pug
+++ b/app/pug/modals/_modal-content-comments.pug
@@ -124,7 +124,7 @@
 							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
 					.comment__links
 						button.comment__reply Ответить
-		#commentFormbox.comment-form-inn.colapse.show
+		#comment-formbox.comment-form-inn.colapse.show
 			.comment.comment_special
 				.article-author
 					p.article-author__left Оставить комментарий:
