--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -47,7 +47,7 @@ html(lang='ru')
 			.container
 				.row
 					.col-12
-						button#btnUp.button.button-up
+						button#btn-up.button.button-up
 							i.icon-arrow-down
 		include ../modals/_modal
 		include ../modals/_modal-content-slider
@@ -71,6 +71,7 @@ html(lang='ru')
 		script(src='js/libs/validate/jquery.validate.min.js')
 		script(src='js/libs/jquery.maskedinput.min.js')
 		script(src='js/libs/bootstrap-modal-ios.js')
+		//script(src='js/libs/detect-browser/detect-browser.js')
 		// main script
 		script(src='js/main/main.js'+version)
 
