--- a/app/pug/stylegide.pug
+++ b/app/pug/stylegide.pug
@@ -39,7 +39,7 @@ html(lang='ru')
 				.container
 					.row
 						.col-12
-							button#btnUp.button.button-up
+							button#btn-up.button.button-up
 								i.icon-arrow-down
 
 			// /.container
