--- a/app/pug/stylegide/_stylegide__forms.pug
+++ b/app/pug/stylegide/_stylegide__forms.pug
@@ -13,7 +13,7 @@
 				label.form-label.form-label_special(for="formSubject") Тема
 				input#formSubject.form__input(type="text", placeholder="Введите тему обращения")
 			.form__box.text-right
-			#formMoreInputs.form__group
+			#form-more-inputs.form__group
 				.form__box
 					label.form-label(for="formFulName")
 						span Ф.И.О.
