--- a/app/pug/widgets/_widget-calendar.pug
+++ b/app/pug/widgets/_widget-calendar.pug
@@ -1,10 +1,11 @@
 // widget widget-calendar
 .widget-calendar.widget-box
-	a.widget-title.widget-title_link(href="/calendar.html")
-		| КАЛЕНДАРЬ СОБЫТИЙ
+	.widget-title
+		a.widget-title_link(href="/calendar.html")
+			| КАЛЕНДАРЬ СОБЫТИЙ
 		button.event-control
 			i.icon-arrow-down
-	#widgetCalendar
+	#widget-calendar
 	#event-6.events
 		a.event.calendar-lnk(href="calendar.html#events-06-10-2018")
 			.event-title
