--- a/app/pug/cards/_cards-full-galery-img.pug
+++ b/app/pug/cards/_cards-full-galery-img.pug
@@ -6,5 +6,5 @@ if cardSettings === undefined
 			.content-titlebox_dark
 				h2= cardSettings.title
 	.card.card-full
-		.card__imgbox(class='card__imgbox_'+cardSettings.cardSize, class=cardSettings.advantClass, style='background-image: url('+cardSettings.imgUrl+');', data-target="#modalImgBox", data-toggle="modal",data-target-content='#image_'+cardSettings.cardSize)
+		.card__imgbox(class='card__imgbox_'+cardSettings.cardSize, class=cardSettings.advantClass, style='background-image: url('+cardSettings.imgUrl+');', data-target="#modal-img-box", data-toggle="modal",data-target-content='#image_'+cardSettings.cardSize)
 			img(id='image_'+cardSettings.cardSize, src=cardSettings.imgUrl, class=cardSettings.imgClass)
