--- a/app/pug/modals/_modal-content-slider.pug
+++ b/app/pug/modals/_modal-content-slider.pug
@@ -7,9 +7,9 @@
 						.page-loader-circle
 					.modal-main__content
 						.modal-main-slider
-							#modalMainSliderTop.modal-main-slider-wrap
+							#modal-main-slider-top.modal-main-slider-wrap
 						.modal-main-slider-title
 						.modal-main-slider.modal-main-slider-bottom
-							#modalMainSliderBottom.modal-main-slider-wrap.modal-main-slider-wrap_bottom
+							#modal-main-slider-bottom.modal-main-slider-wrap.modal-main-slider-wrap_bottom
 						.modal-main-comments
 							include _modal-content-comments
