--- a/app/pug/modals/_modal-video.pug
+++ b/app/pug/modals/_modal-video.pug
@@ -1,4 +1,4 @@
-#modalVideo.modal.fade.modal-main(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
+#modal-video.modal.fade.modal-main(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
 	.modal-dialog.container(role='document')
 		.modal-content
 			.row
