--- a/app/pug/modals/_modal.pug
+++ b/app/pug/modals/_modal.pug
@@ -1,4 +1,4 @@
-#modalImgBox.modal.fade.modal-main(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
+#modal-img-box.modal.fade.modal-main(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
 	.modal-dialog.container(role='document')
 		.modal-content
 			.row
