--- a/app/pug/post.pug
+++ b/app/pug/post.pug
@@ -308,7 +308,7 @@ block content
 							i.icon-arrow-down
 						.comment__reply.comment__link_right
 							button Ответить
-		#commentFormbox.comment-form-inn.colapse.show
+		#comment-formbox.comment-form-inn.colapse.show
 			.comment.comment_special
 				.article-author
 					p.article-author__left Оставить комментарий:
