--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -71,7 +71,7 @@ html(lang='ru')
 		script(src='js/libs/validate/jquery.validate.min.js')
 		script(src='js/libs/jquery.maskedinput.min.js')
 		script(src='js/libs/bootstrap-modal-ios.js')
-		//script(src='js/libs/detect-browser/detect-browser.js')
+		script(src='js/libs/getbrowser/getBrowser.js')
 		// main script
 		script(src='js/main/main.js'+version)
 
